# piemaker

./: .gitignore  .mdl-style.rb  .rtk.json  CHANGELOG.md  LICENSE  Makefile  README.md  checkmake.ini
.github/workflows/: ci-workflow.yaml  release-major-workflow.yaml  release-minor-workflow.yaml  release-patch-workflow.yaml  upgrade-deps-workflow.yaml
example/: piemaker.yml
examples/: .rtk.json  README.md  piemaker.yml  pyproject.toml  requirements.txt
examples/.github/: copilot-instructions.md
examples/.github/instructions/: python-code.instructions.md  testing.instructions.md
examples/examples/: piemakerexample-cli.sh  piemakerexample.sh
examples/piemakerexample/: __init__.py
examples/python-lib/: Makefile  README.md  piemaker.yml  pyproject.toml  requirements.txt
examples/python-lib/.github/: copilot-instructions.md
examples/python-lib/.github/workflows/: ci-workflow.yaml  upgrade-deps-workflow.yaml
examples/python-lib/piemakerexample/: __init__.py
examples/tests/: test_piemakerexample.py
examples/tests-integration/: test_piemakerexample.py
src/: Makefile-piemaker
