[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "piemakerexample"
version = "1.2.3-pre.0"
description = "Example Python package for PieMaker"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/piemakerexample"
repository = "https://github.com/cliffano/piemakerexample"
documentation = "https://github.com/cliffano/piemakerexample"
keywords = [ "piemaker", "example" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "piemakerexample"

[tool.poetry.scripts]
piemakerexample = "piemakerexample:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
twine = "4.0.2"
wheel = "0.40.0"

[tool.poetry.group.test.dependencies]
coverage = "7.2.4"
pylint = "3.0.1"
pytest = "7.3.1"
wily = "1.24.0"

[tool.poetry.group.doc.dependencies]
pylint-report = "2.4.0"
pytest-html = "3.2.0"
Sphinx = "6.2.1"
