[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "piemakerexample"
version = "1.2.3-pre.0"
description = "Example Python package for PieMaker"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/piemakerexample"
repository = "https://github.com/cliffano/piemakerexample"
documentation = "https://github.com/cliffano/piemakerexample"
keywords = [ "piemaker", "example" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "piemakerexample"

[tool.poetry.scripts]
piemakerexample = "piemakerexample:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "~8.3.1"

[tool.poetry.group.dev.dependencies]
black = "~25.11.0"
twine = "~6.2.0"
wheel = "~0.45.1"

[tool.poetry.group.test.dependencies]
coverage = "~7.12.0"
numpy = "1.26.4" # https://stackoverflow.com/questions/78634235/numpy-dtype-size-changed-may-indicate-binary-incompatibility-expected-96-from
pylint = "~4.0.4"
pytest = "~9.0.1"
radon = "~6.0.1"

[tool.poetry.group.doc.dependencies]
ansi2html = "~1.9.2"
pylint-report = "~2.4.2"
pytest-html = "~4.1.1"
Sphinx = "8.1.3" # Pinned for Python 3.10 support
